# EvntConsistColl

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  allreduce_bench.cpp  allreduce_bench_mpi.cpp  bcast.cpp  bcast_bench.cpp  bcast_bench_mpi.cpp  common.h  now.cpp  now.h  queue.cpp  queue.h  reduce.cpp  reduce_bench.cpp  reduce_bench_mpi.cpp
include/: Allreduce.hxx  DataStruct.hxx  DataStructsAndOps.hxx  EvntConsistColl.hxx  consistent.collectives.hxx  evntl.consist.coll.hxx
src/: Allreduce.cxx  CMakeLists.txt  EvntConsistColl.cxx  assert.h  consistent.collectives.cxx  evntl.consist.coll.cxx  gaspi.collectives.cxx  queue.cpp  queue.h  success_or_die.h  testsome.cpp  testsome.h  wait_if_queue_full.h  waitsome.h
